# jni

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_ndkdemo_CounterNative.cpp  com_example_ndkdemo_CounterNative.h  com_example_ndkdemo_CounterNative2.cpp  com_example_ndkdemo_CounterNative2.h  com_example_ndkdemo_CounterNative3.cpp  com_example_ndkdemo_CounterNative3.h  com_example_ndkdemo_NativeExcute.h
app/src/main/java/com/example/ndkdemo/: CounterNative.java  CounterNative2.java  CounterNative3.java  INumber.java  MainActivity.kt  NativeExcute.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
